# rustlings-solutions

./: .gitignore  Cargo.toml  README.md
exercises/: quiz1.rs  quiz2.rs  quiz3.rs
exercises/clippy/: clippy3.rs
exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
exercises/error_handling/: errors3.rs  errors4.rs
exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
exercises/if/: if2.rs
exercises/iterators/: iterators3.rs  iterators5.rs
exercises/options/: options1.rs
exercises/primitive_types/: primitive_types3.rs  primitive_types5.rs
exercises/strings/: strings3.rs  strings4.rs
exercises/structs/: structs3.rs
exercises/threads/: threads2.rs
exercises/vecs/: vecs1.rs  vecs2.rs
src/: exercise.rs  main.rs
