[package]
authors = ["fa_555 <fa_555@foxmail.com>"]
name = "rustlings-solutions"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
serde = "1.0.183"
rustlings = { git = "https://github.com/rust-lang/rustlings", tag = "5.5.1" }
toml = "0.7.6"
